partman-crypto (34) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Divide the progress bar in 65536 parts when erasing disk data.
    The previous setting (100) was a bit low to allow reactive cancellation.
    (Closes: #492899)
  * Update to the new debconf_select interface.
    Requires partman-base (>= 124).

 -- Jérémy Bobbio <lunar@debian.org>  Wed, 30 Jul 2008 09:56:34 +0000

partman-crypto (33) unstable; urgency=low

  [ Max Vozeler ]
  * The dm_crypt module is moving into a separate package
    crypto-dm-modules starting with kernel udebs for 2.6.25-2.
    Make partman-crypto-dm depend on it.
  * Only reset crypto options when changing the crypto type.

  [ Frans Pop ]
  * Move Encryption method above new divider in partition options dialog.
    This is an indicator to users that other options depend on the selected
    encryption method (see #478598).
  * Add note in dialog that changing the encryption method will reset other
    fields to their defaults. Closes: #478598.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * German (de.po) by Jens Seidel
  * Dzongkha (dz.po) by Jurmey Rabgay(Bongop) (DIT,BHUTAN)
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Indonesian (id.po) by Arief S Fitrianto
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Changwoo Ryu
  * Kurdish (ku.po) by Erdal Ronahi
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Marathi (mr.po) by Sampada
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Dutch (nl.po) by Bart Cornelis
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)